--- a/SFTY_TALEND/process/test_0.1.properties
+++ b/SFTY_TALEND/process/test_0.1.properties
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties">
   <TalendProperties:Property xmi:id="_zoVDYN0iEe2nHOSTwPESSw" id="_zoOVsN0iEe2nHOSTwPESSw" label="test" version="0.1" statusCode="" item="_zoVDYt0iEe2nHOSTwPESSw" displayName="test">
-    <author href="../../C:/Program%20Files%20(x86)/Talend-Studio/studio/#/1"/>
+    <author href="../talend.project#_Db-NMt0hEe2nHOSTwPESSw"/>
     <additionalProperties xmi:id="_zphWMN0iEe2nHOSTwPESSw" key="created_product_fullname" value="Talend Cloud Data Management Platform"/>
     <additionalProperties xmi:id="_zphWMd0iEe2nHOSTwPESSw" key="created_product_version" value="8.0.1.20220923_1236-patch"/>
     <additionalProperties xmi:id="_zph9QN0iEe2nHOSTwPESSw" key="created_date" value="2023-04-17T18:51:48.307+0530"/>
